--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div class="grid grid-cols-3 gap-[20px] py-[20px] max-[1100px]:grid-cols-2 max-[890px]:grid-cols-1">
                 <!-- 1 -->
                 <div
-                    class="flex items-center max-[490px]:flex-col max-[490px]:pr-[0] max-[490px]:gap-[10px] pr-[20px] py-[20px] border rounded-md bg-[url(./assets/img/card-bg/1.png)] overflow-hidden bg-center bg-cover">
+                    class="flex items-center max-[490px]:flex-col max-[490px]:pr-[0] max-[490px]:gap-[10px] pr-[20px] py-[20px] border rounded-md bg-[url(../assets/img/card-bg/1.png)] overflow-hidden bg-center bg-cover">
                     <div class="flex justify-between items-center gap-[10px] bg-[#fff] p-[10px] max-[490px]:w-full">
                         <img src="./assets/svg/1.svg" alt="">
                         <p class="font-[500]">
@@ -129,7 +129,7 @@
 
                 <!-- 2 -->
                 <div
-                    class="flex items-center max-[490px]:flex-col max-[490px]:pr-[0] max-[490px]:gap-[10px] pr-[20px] py-[20px] border rounded-md bg-[url(./assets/img/card-bg/2.png)] overflow-hidden bg-center bg-cover">
+                    class="flex items-center max-[490px]:flex-col max-[490px]:pr-[0] max-[490px]:gap-[10px] pr-[20px] py-[20px] border rounded-md bg-[url(../assets/img/card-bg/2.png)] overflow-hidden bg-center bg-cover">
                     <div class="flex justify-between items-center gap-[10px] bg-[#fff] p-[10px] max-[490px]:w-full">
                         <img src="./assets/svg/2.svg" alt="">
                         <p class="font-[500]">
@@ -141,7 +141,7 @@
 
                 <!-- 3 -->
                 <div
-                    class="flex items-center max-[490px]:flex-col max-[490px]:pr-[0] max-[490px]:gap-[10px] pr-[20px] py-[20px] border rounded-md bg-[url(./assets/img/card-bg/3.png)] overflow-hidden bg-center bg-cover">
+                    class="flex items-center max-[490px]:flex-col max-[490px]:pr-[0] max-[490px]:gap-[10px] pr-[20px] py-[20px] border rounded-md bg-[url(../assets/img/card-bg/3.png)] overflow-hidden bg-center bg-cover">
                     <div class="flex justify-between items-center gap-[10px] bg-[#fff] p-[10px] max-[490px]:w-full">
                         <img src="./assets/svg/3.svg" alt="">
                         <p class="font-[500]">
@@ -153,7 +153,7 @@
 
                 <!-- 4 -->
                 <div
-                    class="flex items-center max-[490px]:flex-col max-[490px]:pr-[0] max-[490px]:gap-[10px] pr-[20px] py-[20px] border rounded-md bg-[url(./assets/img/card-bg/4.png)] overflow-hidden bg-center bg-cover">
+                    class="flex items-center max-[490px]:flex-col max-[490px]:pr-[0] max-[490px]:gap-[10px] pr-[20px] py-[20px] border rounded-md bg-[url(../assets/img/card-bg/4.png)] overflow-hidden bg-center bg-cover">
                     <div class="flex justify-between items-center gap-[10px] bg-[#fff] p-[10px] max-[490px]:w-full">
                         <img src="./assets/svg/4.svg" alt="">
                         <p class="font-[500]">
@@ -165,7 +165,7 @@
 
                 <!-- 5 -->
                 <div
-                    class="flex items-center max-[490px]:flex-col max-[490px]:pr-[0] max-[490px]:gap-[10px] pr-[20px] py-[20px] border rounded-md bg-[url(./assets/img/card-bg/5.png)] overflow-hidden bg-center bg-cover">
+                    class="flex items-center max-[490px]:flex-col max-[490px]:pr-[0] max-[490px]:gap-[10px] pr-[20px] py-[20px] border rounded-md bg-[url(../assets/img/card-bg/5.png)] overflow-hidden bg-center bg-cover">
                     <div class="flex justify-between items-center gap-[10px] bg-[#fff] p-[10px] max-[490px]:w-full">
                         <img src="./assets/svg/5.svg" alt="">
                         <p class="font-[500]">
@@ -177,7 +177,7 @@
 
                 <!-- 6 -->
                 <div
-                    class="flex items-center max-[490px]:flex-col max-[490px]:pr-[0] max-[490px]:gap-[10px] pr-[20px] py-[20px] border rounded-md bg-[url(./assets/img/card-bg/6.png)] overflow-hidden bg-center bg-cover">
+                    class="flex items-center max-[490px]:flex-col max-[490px]:pr-[0] max-[490px]:gap-[10px] pr-[20px] py-[20px] border rounded-md bg-[url(../assets/img/card-bg/6.png)] overflow-hidden bg-center bg-cover">
                     <div class="flex justify-between items-center gap-[10px] bg-[#fff] p-[10px] max-[490px]:w-full">
                         <img src="./assets/svg/6.svg" alt="">
                         <p class="font-[500]">
@@ -200,7 +200,7 @@
             <div class="grid grid-cols-3 gap-[20px] py-[20px] max-[1100px]:grid-cols-2 max-[890px]:grid-cols-1">
                 <!-- 1 -->
                 <div
-                    class="flex items-center justify-center max-[490px]:flex-col relative max-[490px]:gap-[10px] max-[350px]:pt-[80px] py-[10px] border rounded-md bg-[url(./assets/img/card-bg/1.png)] overflow-hidden bg-center bg-cover">
+                    class="flex items-center justify-center max-[490px]:flex-col relative max-[490px]:gap-[10px] max-[350px]:pt-[80px] py-[10px] border rounded-md bg-[url(../assets/img/card-bg/1.png)] overflow-hidden bg-center bg-cover">
                     <p
                         class="font-[400] text-[15px] bg-1 p-[5px] text-[#fff] max-[350px]:w-full absolute left-0 top-[10px] ">
                         Зерноочистительное оборудование
@@ -210,7 +210,7 @@
 
                 <!-- 2 -->
                 <div
-                    class="flex items-center justify-center max-[490px]:flex-col relative max-[490px]:gap-[10px] max-[350px]:pt-[80px] py-[10px] border rounded-md bg-[url(./assets/img/card-bg/2.png)] overflow-hidden bg-center bg-cover">
+                    class="flex items-center justify-center max-[490px]:flex-col relative max-[490px]:gap-[10px] max-[350px]:pt-[80px] py-[10px] border rounded-md bg-[url(../assets/img/card-bg/2.png)] overflow-hidden bg-center bg-cover">
                     <p
                         class="font-[400] text-[15px] bg-1 p-[5px] text-[#fff] max-[350px]:w-full absolute left-0 top-[10px] ">
                         Зерноочистительное оборудование
@@ -220,7 +220,7 @@
 
                 <!-- 3 -->
                 <div
-                    class="flex items-center justify-center max-[490px]:flex-col relative max-[490px]:gap-[10px] max-[350px]:pt-[80px] py-[10px] border rounded-md bg-[url(./assets/img/card-bg/3.png)] overflow-hidden bg-center bg-cover">
+                    class="flex items-center justify-center max-[490px]:flex-col relative max-[490px]:gap-[10px] max-[350px]:pt-[80px] py-[10px] border rounded-md bg-[url(../assets/img/card-bg/3.png)] overflow-hidden bg-center bg-cover">
                     <p
                         class="font-[400] text-[15px] bg-1 p-[5px] text-[#fff] max-[350px]:w-full absolute left-0 top-[10px] ">
                         Зерноочистительное оборудование
@@ -230,7 +230,7 @@
 
                 <!-- 4 -->
                 <div
-                    class="flex items-center justify-center max-[490px]:flex-col relative max-[490px]:gap-[10px] max-[350px]:pt-[80px] py-[10px] border rounded-md bg-[url(./assets/img/card-bg/4.png)] overflow-hidden bg-center bg-cover">
+                    class="flex items-center justify-center max-[490px]:flex-col relative max-[490px]:gap-[10px] max-[350px]:pt-[80px] py-[10px] border rounded-md bg-[url(../assets/img/card-bg/4.png)] overflow-hidden bg-center bg-cover">
                     <p
                         class="font-[400] text-[15px] bg-1 p-[5px] text-[#fff] max-[350px]:w-full absolute left-0 top-[10px] ">
                         Зерноочистительное оборудование
@@ -240,7 +240,7 @@
 
                 <!-- 5 -->
                 <div
-                    class="flex items-center justify-center max-[490px]:flex-col relative max-[490px]:gap-[10px] max-[350px]:pt-[80px] py-[10px] border rounded-md bg-[url(./assets/img/card-bg/5.png)] overflow-hidden bg-center bg-cover">
+                    class="flex items-center justify-center max-[490px]:flex-col relative max-[490px]:gap-[10px] max-[350px]:pt-[80px] py-[10px] border rounded-md bg-[url(../assets/img/card-bg/5.png)] overflow-hidden bg-center bg-cover">
                     <p
                         class="font-[400] text-[15px] bg-1 p-[5px] text-[#fff] max-[350px]:w-full absolute left-0 top-[10px] ">
                         Зерноочистительное оборудование
@@ -250,7 +250,7 @@
 
                 <!-- 6 -->
                 <div
-                    class="flex items-center justify-center max-[490px]:flex-col relative max-[490px]:gap-[10px] max-[350px]:pt-[80px] py-[10px] border rounded-md bg-[url(./assets/img/card-bg/6.png)] overflow-hidden bg-center bg-cover">
+                    class="flex items-center justify-center max-[490px]:flex-col relative max-[490px]:gap-[10px] max-[350px]:pt-[80px] py-[10px] border rounded-md bg-[url(../assets/img/card-bg/6.png)] overflow-hidden bg-center bg-cover">
                     <p
                         class="font-[400] text-[15px] bg-1 p-[5px] text-[#fff] max-[350px]:w-full absolute left-0 top-[10px] ">
                         Зерноочистительное оборудование
@@ -473,7 +473,7 @@
         </div>
     </section>
 
-    <section class="py-[40px] bg-[url(./assets/img/banner.png)] bg-center bg-cover">
+    <section class="py-[40px] bg-[url(../assets/img/banner.png)] bg-center bg-cover">
         <div class="container2 flex justify-between items-center max-[890px]:flex-col max-[890px]:gap-[20px]">
             <img src="./assets/img/w-logo.png" alt="" class="w-[320px] max-[890px]:w-[200px] max-[400px]:w-[120px]">
 
