--- a/index.html
+++ b/index.html
@@ -642,6 +642,50 @@
         </div>
     </section>
 
+    <footer class="py-[50px]">
+        <div class="container2">
+            <div class="grid grid-cols-5 max-[980px]:grid-cols-3 max-[980px]:gap-[40px] max-[600px]:grid-cols-2 max-[380px]:grid-cols-1">
+                <div class="flex flex-col justify-start items-start gap-[10px]">
+                    <a href="./index.html"><img src="./assets/img/logo.png" alt="" class="w-[140px]"></a>
+
+                    <p class="text-[14px] font-[300] opacity-70">
+                        © 2021 ООО «ОЛИС». <br> Все права защищены
+                    </p>
+
+                    <a href="#!" class="text-1 underline font-[500]">Карта сайта</a>
+                </div>
+
+                <ul class="flex flex-col justify-start items-start gap-[10px]">
+                    <h3 class="font-[600]">Наша компания</h3>
+                    <li><a href="#!" class="opacity-80 hover:text-1">Как мы работаем</a></li>
+                    <li><a href="#!" class="opacity-80 hover:text-1">Отзывы о компании</a></li>
+                    <li><a href="#!" class="opacity-80 hover:text-1">Новинки компании</a></li>
+                </ul>
+
+                <ul class="flex flex-col justify-start items-start gap-[10px]">
+                    <h3 class="font-[600]">Пресс-центр</h3>
+                    <li><a href="#!" class="opacity-80 hover:text-1">Новости</a></li>
+                    <li><a href="#!" class="opacity-80 hover:text-1">Статьи</a></li>
+                    <li><a href="#!" class="opacity-80 hover:text-1">Выставки</a></li>
+                </ul>
+
+                <ul class="flex flex-col justify-start items-start gap-[10px]">
+                    <h3 class="font-[600]">Контакты</h3>
+                    <li><a href="#!" class="opacity-80 hover:text-1">+38 (067) 822-85-58</a></li>
+                    <li><a href="#!" class="opacity-80 hover:text-1">+7 (831) 288-93-74</a></li>
+                </ul>
+
+                <ul class="flex flex-col justify-start items-start gap-[5px]">
+                    <h3 class="font-[600]">E-mail</h3>
+                    <li><a href="#!" class="opacity-80 hover:text-1">olis1@ukr.net</a></li>
+                    <li><a href="#!" class="opacity-80 hover:text-1">info@olis.com.ua</a></li>
+                    <h3 class="font-[600]">Время работы</h3>
+                    <li>с 8:00 - до 17:00</li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./src/swiper.js"></script>
