--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
                         и контроля качества зерна
                     </p>
 
-                    <a href="#!"
-                        class="text-[#fff] bg-1 p-[8px_20px] text-center active:scale-[.95] max-[400px]:w-full">Оставить
-                        заявку</a>
+                    <a href="./about.html"
+                        class="text-[#fff] bg-1 p-[8px_50px] text-center active:scale-[.95] max-[400px]:w-full">Page
+                        2</a>
                 </div>
 
                 <div class="col-span-2 max-[1175px]:col-span-1 overflow-hidden">
@@ -644,7 +644,8 @@
 
     <footer class="py-[50px]">
         <div class="container2">
-            <div class="grid grid-cols-5 max-[980px]:grid-cols-3 max-[980px]:gap-[40px] max-[600px]:grid-cols-2 max-[380px]:grid-cols-1">
+            <div
+                class="grid grid-cols-5 max-[980px]:grid-cols-3 max-[980px]:gap-[40px] max-[600px]:grid-cols-2 max-[380px]:grid-cols-1">
                 <div class="flex flex-col justify-start items-start gap-[10px]">
                     <a href="./index.html"><img src="./assets/img/logo.png" alt="" class="w-[140px]"></a>
 
